# grove

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: iris.py
grove/: __init__.py  cli.py  compile.py  emit.py  ir.py  parse.py  quantize.py  testbench.py
test/: conftest.py  test_emit.py  test_parse.py  test_quantize.py  test_roundtrip.py
