[project]
name = "grove"
version = "0.1.0"
description = "Compile XGBoost models to synthesizable Verilog HDL for FPGA deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
]

[project.scripts]
grove = "grove.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grove"]

[tool.pytest.ini_options]
testpaths = ["test"]
